[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bokeh_agent"
version = "0.2.4"
authors = [
  { name="MossGoblin", email="hugolabs@gmail.com" },
]
description = "A library for easy creating bokeh plots"
readme = "README.md"
requires-python = ">=3.9.17"
dependencies = [
  'bokeh>=3.2.1',
  'pandas>=2.1.0'
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/MossGoblin/bokeh_agent"
"Bug Tracker" = "https://github.com/MossGoblin/bokeh_agent/issues"